# drone

./: .gitignore  README.md
myscripts/tests/Videofeed/: CMakeLists.txt  test.cpp
myscripts/tests/mavsdk_connect/: CMakeLists.txt  script.cpp
ros2_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
setup/opencv/: DisplayImage.cpp  README.md  install_opencv_cpp.sh
setup/opencv-contrib/: install_opencv-contrib.sh
